# NeuralNetCPP

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
Legacy/: Trainer_MD.cpp  Trainer_MD.h
data/: CMakeLists.txt
include/: Affine_Layer.h  Dataloader.h  Layer.h  Network.h  ReLu.h  ReLu_Layer.h  Sigm_Layer.h  Sofm_Layer.h  Trainer.h  Trainer_MD.h
source/: Affine_Layer.cpp  Dataloader.cpp  Layer.cpp  Network.cpp  ReLu.cpp  ReLu_Layer.cpp  Sigm_Layer.cpp  Sofm_Layer.cpp  Trainer.cpp  Trainer_MD.cpp
